src/task/tools/downloader/snapshots/mob_rs__task__tools__downloader__tests__downloader_operations.snap
---
source: src/task/tools/downloader/tests.rs
expression: operations
---
- - download_op
  - Download
- - clean_op
  - Clean
- - default
  - Download
