src/task/tools/downloader/snapshots/mob_rs__task__tools__downloader__tests__downloader_tool_builder_chain.snap
---
source: src/task/tools/downloader/tests.rs
expression: tool
---
DownloaderTool {
    urls: [
        "https://example.com/file.zip",
    ],
    output_file: Some(
        "/tmp/file.zip",
    ),
    force: true,
    operation: Download,
}
