src/task/tools/downloader/snapshots/mob_rs__task__tools__downloader__tests__downloader_tool_force_false.snap
---
source: src/task/tools/downloader/tests.rs
expression: tool
---
DownloaderTool {
    urls: [],
    output_file: None,
    force: false,
    operation: Download,
}
