src/task/tools/downloader/snapshots/mob_rs__task__tools__downloader__tests__downloader_tool_urls.snap
---
source: src/task/tools/downloader/tests.rs
expression: tool
---
DownloaderTool {
    urls: [
        "https://example.com/file.zip",
        "https://backup.com/file.zip",
    ],
    output_file: None,
    force: false,
    operation: Download,
}
